Fixed problem with disbursement info link from Purap Corrected name and parameters for ach payee lookup

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1876,6 +1876,8 @@ error.pdp.paymentLoad.invalidPayeeIdType=Group #{0}, Payee ID Type {1} is not va
 error.pdp.achAccount.accountNotInactivable = AchBank record cannot be set to inactive because a payee ach account record exists with this bank routing number.
 error.pdp.customerProfile.duplicateBankPerDisburementTypeCode = Customer Profile should only have one Customer Bank per Disbursement Type Code.
 
+error.pdp.payeeLookupVendorEmployeeConfusion= {0} cannot be {1} when {2} or {3} has been entered.
+
 message.pdp.paymentLoad.fileThreshold=The total amount of this file {0} is greater than the customer threshold amount {1}
 message.pdp.paymentLoad.paydateOver30DaysPast=Payment date of {0} is more than 30 days ago
 message.pdp.paymentLoad.paydateOver30DaysOut=Payment date of {0} is more than 30 days in the future
