KFSMI-409: do complicated required field sets for entry, pending entry, and encumbrance lookups

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -786,6 +786,10 @@ error.gl.ReferenceOriginCodeNotFound = Reference Origin Code not found in the da
 error.gl.ReferenceFields=If one reference field is provided all reference fields must be provided.
 error.gl.DescriptionCannotBeBlank=Description cannot be blank.
 
+error.gl.lookup.entry.nonMatchingRequiredFields=To successfully complete this search, either university fiscal year, chart of accounts code, account number, and fiscal period must be specified, or university fiscal year and document number must be specified.
+error.gl.lookup.pendingEntry.nonMatchingRequiredFields=To successfully complete this search, either university fiscal year, chart of accounts code, account number, and fiscal period must be specified, or university fiscal year and document number must be specified.
+error.gl.lookup.encumbrance.nonMatchingRequiredFields=To successfully complete this search, either university fiscal year, chart of accounts code, and account number must be specified, or university fiscal year and document number must be specified.
+
 error.labor.PayrollEndDateFiscalPeriodCodeNotFound = Payroll End Date Fiscal Period not found in the DB.
 error.labor.PayrollEndDateFiscalYearNotFound = Payroll End Date Fiscal Year not found in the DB.
 
