KULCAP-1197,1196 and on Jmeter test

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2230,6 +2230,7 @@ error.payment.invalid.document.postdate= You are adding a payment with a future 
 error.payment.document.noAssetsInDocumentFound=The document must contain at least one asset.
 error.payment.document.noZeroValueAssetsAllowed=Assets with previous cost equals zero are not allowed because, they won't get any payment applied. Unless, all the assets have a previous cost equals to zero   
 warning.payment.object.subtype.not_the_same=The object sub-type code on the accounting line(s) is not in agreement with the object sub-type code(s) on the approved payments for this asset(s) per parameter
+error.posting.date.future.notallowed = Posting date cannot be in the future.
 #****** End - Asset payment messages *********
 
 #****** Start - Asset Location Edit Messages *********
