--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2030,6 +2030,8 @@ error.document.invoiceRecurrenceMaintenance.intervalCodeIsRequired=Recurrence In
 error.document.invoiceRecurrenceMaintenance.workgroupIsRequired=Workgroup Identifier is required.
 error.document.invoiceRecurrenceMaintenance.workgroupIsInvalid=Workgroup Identifier must be valid and active.
 error.document.invoiceRecurrenceMaintenance.initiatorIsRequired=Invoice Initiator is required.
+error.document.invoiceRecurrenceMaintenance.initiatorDoesNotExist=The Invoice Initiator does not exist.
+error.document.invoiceRecurrenceMainitenance.initiatorIsNotAuthorized=The Invoice Initiator is not authorized to initiate recurrence.
 error.document.invoiceRecurrenceMaintenance.notEnoughDataToGenerateRecurrence=The following information is required to generated the recurrence:
 error.document.invoiceRecurrenceMaintenance.activeIndicatorMustBeTrue=Active Indicator must be checked. 
 
