a message update for gl_scrubber

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -52,7 +52,7 @@ error.numeric={0} should be numeric.
 error.invalidNegativeAmountForNonCorrection=Negative amounts are not allowed.
 error.zeroAmount="0.00" amounts are not allowed for {0}, and lines with 0.00 have been removed.
 error.zeroOrNegativeAmount="$0.00" amounts and negative amounts are not allowed on {0}.
-error.negativeAmount=Negative amounts are not allowed for the {0}.
+error.negativeAmount=Negative amounts are not allowed.
 
 # authorization error messages
 error.authorization.general= User {0} is not authorized to take action '{1}' on targets of type '{2}'
