--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1303,7 +1303,7 @@ errors.creditMemo.line.percent=Accounting line percentage must be between 1 and 
 message.duplicate.creditMemo.vendorNumber=Warning: A Credit Memo for this Vendor with the same Credit Memo Number already exists. Do you want to continue?
 message.duplicate.creditMemo.vendorNumber.date.amount=Warning: A Credit Memo for this Vendor with the same date and amount already exists. Do you want to continue?
 message.creditMemo.totalOverride=Override Unmatched Total
-message.creditMemo.initMessage=** You must enter one and only one of these fields: PREQ #, Purchase Order #, or Vendor #.
+message.creditMemo.initMessage=** You must enter one and only one of these fields: Payment Request #, Purchase Order #, or Vendor #.
 warning.creditMemo.unmatchedExtendPrice=Warning: Calculated Qty X PRICE
 creditMemo.question.hold.text=A note is required to place a Credit Memo on hold.
 creditMemo.question.cancel.text=A note is required to cancel a Credit Memo.
