KFSMI-861: award gets its own inquiry; account points to grant number for award

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -413,6 +413,8 @@ message.closeJob.succeeded = The Close batch job ran successfully.
 label.document.journalVoucher.accountingLine.credit=Credit
 label.document.journalVoucher.accountingLine.debit=Debit
 
+# C&G
+message.inquiry.award.title=View Award
 # KRA
 document.budget.override=Budget Override - Fields populated with Budget data are disabled.
 
