--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1516,6 +1516,7 @@ error.budget.orgNotSelected = No organization is selected. Please set the select
 error.budget.subFundNotSelected = No subfund is selected. Please check the report flag for a subfund.
 error.budget.objectCodeNotSelected = No object code is selected. Please check the select flag for an object code.
 error.budget.reasonCodeNotSelected = No reason code is selected. Please check the select flag for a reason code.
+error.budget.thresholdPercentNeeded = Percent Change Threshold value required when apply theshold is checked.
 error.budget.noAccountsPushDown = The are no budgeted accounts for the selected organization(s) at the point of view level: {0} {1}.
 error.budget.noAccountsPullUp = The are no budgeted accounts for the selected organization(s) below the point of view level: {0} {1}.
 error.budget.noRecordsMyAccounts = There are no budgeted accounts where you are the account's manager or delegate.
