even more unit test fixes

--- a/test/unit/src/org/kuali/kfs/module/ld/testdata/accountStatusCurrentFunds.properties
+++ b/test/unit/src/org/kuali/kfs/module/ld/testdata/accountStatusCurrentFunds.properties
@@ -1,12 +1,12 @@
 deliminator = ;
 
-fieldNames  = universityFiscalYear;chartOfAccountsCode;accountNumber;subAccountNumber;financialObjectCode;financialSubObjectCode;financialBalanceTypeCode;financialObjectTypeCode;positionNumber;emplid;accountLineAnnualBalanceAmount;financialBeginningBalanceLineAmount;contractsGrantsBeginningBalanceAmount;month1Amount;
+fieldNames  = chartOfAccountsCode;accountNumber;subAccountNumber;financialObjectCode;financialSubObjectCode;financialBalanceTypeCode;financialObjectTypeCode;positionNumber;emplid;accountLineAnnualBalanceAmount;financialBeginningBalanceLineAmount;contractsGrantsBeginningBalanceAmount;month1Amount;
 dataCleanup = ;;4031401;;;;;;;;;;;;
 
 
 getAccountStatusCurrentFunds.numOfData = 4
-getAccountStatusCurrentFunds.testData1 = 2004;BA;6044906;-----;2500;---;AC;EX;00009323;0000001201;26737.6;0;0;2027.2;
-getAccountStatusCurrentFunds.testData2 = 2004;BA;6044906;-----;2500;---;AC;EX;00009324;0000001226;26737.6;0;0;2027.2;
-getAccountStatusCurrentFunds.testData3 = 2004;BA;6044906;-----;2500;---;AC;EX;00014986;0000001296;26737.6;0;0;2027.2;
-getAccountStatusCurrentFunds.testData4 = 2004;BA;6044906;-----;2500;---;AC;EX;00017313;0000001235;26737.6;0;0;2027.2;
+getAccountStatusCurrentFunds.testData1 = BA;6044906;-----;2500;---;AC;EX;00009323;0000001201;26737.6;0;0;2027.2;
+getAccountStatusCurrentFunds.testData2 = BA;6044906;-----;2500;---;AC;EX;00009324;0000001226;26737.6;0;0;2027.2;
+getAccountStatusCurrentFunds.testData3 = BA;6044906;-----;2500;---;AC;EX;00014986;0000001296;26737.6;0;0;2027.2;
+getAccountStatusCurrentFunds.testData4 = BA;6044906;-----;2500;---;AC;EX;00017313;0000001235;26737.6;0;0;2027.2;
 getAccountStatusCurrentFunds.expectedInsertion = 4
