--- a/test/unit/src/org/kuali/kfs/module/ld/testdata/accountStatusBaseFunds.properties
+++ b/test/unit/src/org/kuali/kfs/module/ld/testdata/accountStatusBaseFunds.properties
@@ -1,33 +1,33 @@
 deliminator = ;
-fieldNames  = universityFiscalYear;chartOfAccountsCode;accountNumber;subAccountNumber;financialObjectCode;financialSubObjectCode;financialBalanceTypeCode;financialObjectTypeCode;accountLineAnnualBalanceAmount;financialBeginningBalanceLineAmount;contractsGrantsBeginningBalanceAmount;
+fieldNames  = chartOfAccountsCode;accountNumber;subAccountNumber;financialObjectCode;financialSubObjectCode;financialBalanceTypeCode;financialObjectTypeCode;accountLineAnnualBalanceAmount;financialBeginningBalanceLineAmount;contractsGrantsBeginningBalanceAmount;
 dataCleanup = ;;;;;;;;;;;;;;;;;;;;;;;
 
 getAccountStatusBaseFunds.numOfData = 12
-getAccountStatusBaseFunds.testData1 = 2007;BL;1031400;-----;2000;---;BB;EX;1653.00;3812539.00;0.00
-getAccountStatusBaseFunds.testData2 = 2007;BL;1031400;-----;2200;---;BB;EX;0.00;29000.00;0.00
-getAccountStatusBaseFunds.testData3 = 2007;BL;1031400;-----;2300;---;BB;EX;0.00;160300.00;0.00
-getAccountStatusBaseFunds.testData4 = 2007;BL;1031400;-----;2350;---;BB;EX;0.00;616980.00;0.00
-getAccountStatusBaseFunds.testData5 = 2007;BL;1031400;-----;2383;---;BB;EX;0.00;28800.00;0.00
-getAccountStatusBaseFunds.testData6 = 2007;BL;1031400;-----;2400;---;BB;EX;0.00;439734.00;0.00
-getAccountStatusBaseFunds.testData7 = 2007;BL;1031400;-----;2500;---;BB;EX;0.00;393536.00;0.00
-getAccountStatusBaseFunds.testData8 = 2007;BL;1031400;-----;3500;---;BB;EX;0.00;4326.00;0.00
-getAccountStatusBaseFunds.testData9 = 2007;BL;1031400;-----;5625;---;BB;EX;216.00;607672.00;0.00
-getAccountStatusBaseFunds.testData10 = 2007;BL;1031400;-----;5760;---;BB;EX;116.00;338458.00;0.00
-getAccountStatusBaseFunds.testData11 = 2007;BL;1031400;-----;5772;---;BB;EX;308.00;793474.00;0.00
-getAccountStatusBaseFunds.testData12 = 2007;BL;1031400;-----;5773;---;BB;EX;0.00;34710.00;0.00
+getAccountStatusBaseFunds.testData1 = BL;1031400;-----;2000;---;BB;EX;1653.00;3812539.00;0.00
+getAccountStatusBaseFunds.testData2 = BL;1031400;-----;2200;---;BB;EX;0.00;29000.00;0.00
+getAccountStatusBaseFunds.testData3 = BL;1031400;-----;2300;---;BB;EX;0.00;160300.00;0.00
+getAccountStatusBaseFunds.testData4 = BL;1031400;-----;2350;---;BB;EX;0.00;616980.00;0.00
+getAccountStatusBaseFunds.testData5 = BL;1031400;-----;2383;---;BB;EX;0.00;28800.00;0.00
+getAccountStatusBaseFunds.testData6 = BL;1031400;-----;2400;---;BB;EX;0.00;439734.00;0.00
+getAccountStatusBaseFunds.testData7 = BL;1031400;-----;2500;---;BB;EX;0.00;393536.00;0.00
+getAccountStatusBaseFunds.testData8 = BL;1031400;-----;3500;---;BB;EX;0.00;4326.00;0.00
+getAccountStatusBaseFunds.testData9 = BL;1031400;-----;5625;---;BB;EX;216.00;607672.00;0.00
+getAccountStatusBaseFunds.testData10 = BL;1031400;-----;5760;---;BB;EX;116.00;338458.00;0.00
+getAccountStatusBaseFunds.testData11 = BL;1031400;-----;5772;---;BB;EX;308.00;793474.00;0.00
+getAccountStatusBaseFunds.testData12 = BL;1031400;-----;5773;---;BB;EX;0.00;34710.00;0.00
 
 
 getAccountStatusBaseFunds.expectedNumOfData = 13
-getAccountStatusBaseFunds.expected1 = 2007;BL;1031400;-----;2000;---;3814192.00;4603766.94;-789574.94
-getAccountStatusBaseFunds.expected2 = 2007;BL;1031400;-----;2200;---;29000.00;0.00;29000.00;  
-getAccountStatusBaseFunds.expected3 = 2007;BL;1031400;-----;2300;---;160300.00;0.00;160300.00; 
-getAccountStatusBaseFunds.expected4 = 2007;BL;1031400;-----;2350;---;616980.00;0.00;616980.00; 
-getAccountStatusBaseFunds.expected5 = 2007;BL;1031400;-----;2383;---;28800.00;0.00;28800.00;  
-getAccountStatusBaseFunds.expected6 = 2007;BL;1031400;-----;2400;---;439734.00;271180.20;168553.80;  
-getAccountStatusBaseFunds.expected7 = 2007;BL;1031400;-----;2480;---;0.00;188809.04;-188809.04;
-getAccountStatusBaseFunds.expected8 = 2007;BL;1031400;-----;2500;---;393536.00;430186.60;-36650.60;
-getAccountStatusBaseFunds.expected9 = 2007;BL;1031400;-----;3500;---;4326.00;0.00;4326.00;
-getAccountStatusBaseFunds.expected10 = 2007;BL;1031400;-----;5625;---;607888.00;0.00;607888.00;
-getAccountStatusBaseFunds.expected11 = 2007;BL;1031400;-----;5760;---;338574.00;0.00;338574.00;  
-getAccountStatusBaseFunds.expected12 = 2007;BL;1031400;-----;5772;---;793782.00;0.00;793782.00;  
-getAccountStatusBaseFunds.expected13 = 2007;BL;1031400;-----;5773;---;34710.00;0.00;34710.00;
+getAccountStatusBaseFunds.expected1 = BL;1031400;-----;2000;---;3814192.00;4603766.94;-789574.94
+getAccountStatusBaseFunds.expected2 = BL;1031400;-----;2200;---;29000.00;0.00;29000.00;  
+getAccountStatusBaseFunds.expected3 = BL;1031400;-----;2300;---;160300.00;0.00;160300.00; 
+getAccountStatusBaseFunds.expected4 = BL;1031400;-----;2350;---;616980.00;0.00;616980.00; 
+getAccountStatusBaseFunds.expected5 = BL;1031400;-----;2383;---;28800.00;0.00;28800.00;  
+getAccountStatusBaseFunds.expected6 = BL;1031400;-----;2400;---;439734.00;271180.20;168553.80;  
+getAccountStatusBaseFunds.expected7 = BL;1031400;-----;2480;---;0.00;188809.04;-188809.04;
+getAccountStatusBaseFunds.expected8 = BL;1031400;-----;2500;---;393536.00;430186.60;-36650.60;
+getAccountStatusBaseFunds.expected9 = BL;1031400;-----;3500;---;4326.00;0.00;4326.00;
+getAccountStatusBaseFunds.expected10 = BL;1031400;-----;5625;---;607888.00;0.00;607888.00;
+getAccountStatusBaseFunds.expected11 = BL;1031400;-----;5760;---;338574.00;0.00;338574.00;  
+getAccountStatusBaseFunds.expected12 = BL;1031400;-----;5772;---;793782.00;0.00;793782.00;  
+getAccountStatusBaseFunds.expected13 = BL;1031400;-----;5773;---;34710.00;0.00;34710.00;
