--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1220,8 +1220,9 @@ requisition.nonAPO.capital.asset.rules=Requisition has failed Capital Asset rule
 requisition.nonAPO.outside.nextFY.approval.range=Requisition is set to encumber next fiscal year and approval is not within APO allowed date range.
 
 # Sensitive Data
-error.assign.inactive.sensitiveData=Inactive sensitive data '{0}' is chosen for assignment. 
-error.assign.redundant.sensitiveData=Sensitive data '{0}' appeared more than once in the assignment.
+error.assign.sensitiveData.reason.empty=No reason is provided for this sensitive data assignment. 
+error.assign.sensitiveData.inactive=Inactive sensitive data '{0}' is chosen for assignment. 
+error.assign.sensitiveData.redundant=Sensitive data '{0}' appeared more than once in the assignment.
 
 # Commodity Codes
 message.document.pur.commodityCodesCleared=The commodity codes were successfully cleared from all items.
