--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1486,6 +1486,7 @@ error.invalid.position=Invalid position number for fiscal year.
 
 # Budget Construction
 document.budget.question.confirmCleanup.text=Previous Budget Construction session detected, OK to perform session cleanup?"
+document.budget.question.confirmMonthlyOverride.text=Warning! Annual amount {0} not equal to monthly total of {1}. OK to override?
 
 error.budget.authorization.document = User {0} is not authorized to {1} document '{2}' <br><a class\="portal_link" href\="portal.do?channelTitle\=Budget Construction Selection&channelUrl\=budgetBudgetConstructionSelection.do?methodToCall\=loadExpansionScreen"  title\="Budget Construction Selection">Budget Construction Selection</a>
 error.budget.pullup.document = Document pullup failed: {0}
@@ -1546,6 +1547,7 @@ message.budget.thresholdSelection = <b>Percent Change Threshold</b> <br><br> Set
 message.budget.selectedObjectCodes = Selected Object Code(s)
 message.budget.salarySettingSaved = Salary setting was successfully saved.
 message.budget.salarySettingSavedAndClosed = Salary setting was successfully saved and closed.
+message.budget.monthlyAnnualOverrideSaved = Annual request amount has been overriden by monthly total and amounts saved.
 message.budget.accountPullupList = The initial list shows all accounts not pulled up, based on the organization pull up selection.
 message.budget.accountPushdownList = The initial list shows all accounts, based on the organization selection, at the point of view level.
 message.budget.accountManagerDelegateList = The initial list contains all budgeted accounts where you are the account's manager or delegate.
