KULBUD-156 Salary Summary report

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -9,6 +9,7 @@ header.organization = Organization:
 header.fundGroup = Fund Group:
 header.subFundGroup = Sub-Fund Group:
 header.amount = Amount
+header.AmtChg = Amt Chg
 header.percent = Percent
 header.page = Page
 header.LvInt = Lv.Int.
@@ -32,6 +33,7 @@ header.FTE = FTE
 header.CSFBase = CSF Base
 header.Salary = Salary
 header.Pct = Pct
+header.PctChg = Pct Chg
 header.Mt = Mt
 header.LvsReqCsf = Lvs.Req.CSF
 header.Code = Code
