--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1146,7 +1146,7 @@ purchaseOrder.route.message.reopen.text=Your Purchase Order Reopen request was s
 purchaseOrder.route.message.split.text=Pick items to move to the new Purchase Order Split document.
 purchaseOrder.route.message.payment.hold.text=Your Purchase Order Payment Hold request was successfully submitted.
 purchaseOrder.route.message.remove.hold.text=Your Purchase Order Remove from Payment Hold request was successfully submitted.
-purchaseOrder.route.message.confirm.award.text=<p>Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.</p> <table class\="datatable" cellpadding\="0" cellspacing\="0"> <tr> <th align\=center class\="bord-l-b">Vendor Name&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Awarded Date&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Quote Status&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Rank</th> </tr> {0} </table>
+purchaseOrder.route.message.confirm.award.text=[p]Please review the summary below. The 'Yes' button will complete the awarding of this quote and all purchase order and quote data will be saved.  Data on this quote cannot be updated after completion. The 'No' button will return you to the purchase order screen and not complete the awarding of this quote.[/p] <table class\="datatable" cellpadding\="0" cellspacing\="0"> <tr> <th align\=center class\="bord-l-b">Vendor Name&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Awarded Date&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Quote Status&nbsp;</th> <th align\=center class\="bord-l-b">&nbsp;Rank</th> </tr> {0} </table>
 purchaseOrder.route.message.confirm.award.row.text= <tr> <td class\="datacell">{0}&nbsp;</td> <td class\="datacell">{1}</td> <td class\="datacell">{2}&nbsp;</td> <td class\="datacell">{3}&nbsp;</td> </tr>
 purchaseOrder.route.message.cancel.note.text=Cancelled Quote\: 
 
@@ -1316,11 +1316,11 @@ creditMemo.question.removeHold.text=A note is required to remove hold on a Credi
 errors.receivingLine.documentActiveForPo=Cannot create document, an existing Receiving Document (ID {0}) is in process for Purchase Order (ID {1})
 errors.receivingLine.poNotActive=Cannot create document, Purchase Order {0} is not open.
 errors.receiving.lineitem.required=At least one item should be entered.
-message.duplicate.receivingLine.prefix=Warning: A Receiving Line Document for the Purchase Order (ID {0}) with the same<br><br>
+message.duplicate.receivingLine.prefix=Warning: A Receiving Line Document for the Purchase Order (ID {0}) with the same[br][br]
 message.duplicate.receivingLine.suffix=[br]Do you want to continue?
-message.duplicate.receivngLine.vendorDate=Vendor Date already exists<br>
-message.duplicate.receivingLine.packingSlipNumber=Packing Slip Number already exists<br>
-message.duplicate.receivingLine.billOfLadingNumber=Bill of Lading Number already exists<br>
+message.duplicate.receivngLine.vendorDate=Vendor Date already exists[br]
+message.duplicate.receivingLine.packingSlipNumber=Packing Slip Number already exists[br]
+message.duplicate.receivingLine.billOfLadingNumber=Bill of Lading Number already exists[br]
 message.receiving.lineitem.return=quantity(ies) returned for the item at line number  
 message.receiving.lineitem.damage=quantity(ies) damaged for the item at line number 
 
@@ -1336,7 +1336,7 @@ message.receiving.correction.note=A note is required to create a Receiving Corre
 errors.bulkReceiving.documentActiveForPo=Cannot create document, an existing Bulk Receiving Document (ID {0}) is in process for Purchase Order (ID {1})
 errors.bulkReceiving.purchaseOrder.notOpen=Error: The specified PO is not open.
 errors.bulkReceiving.invalidPo=Invalid Purchase Order (ID{0}) 
-message.bulkReceiving.duplicate.prefix=Warning: A Bulk Receiving Document for the Purchase Order (ID {0}) with the same<br><br>
+message.bulkReceiving.duplicate.prefix=Warning: A Bulk Receiving Document for the Purchase Order (ID {0}) with the same[br][br]
 message.bulkReceiving.goodsDeliveredBy.label=Goods delivered by
 error.bulkreceiving.pdf=PDF Failed : {0}.
 
