KFSMI-3345: Updated junit test cases to work better with new FY data (and hopefully make it more smooth next year). Also fixed OJB caching problem.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2407,9 +2407,9 @@ cab.error.data.edit.lock = This version of data has already been modified by ano
 error.batch.balancing.files=Input files not found or not readable.
 error.batch.balancing.unknown.failure=Process stopped due to %s on line number %d
 message.batch.balancing.data.insert=%s or %s empty. Running populates on history tables.\n\n
-message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for fiscal year of %d found. That is out of range and will be deleted.\n"
-message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n\n
-message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=
+message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for fiscal year of %d found. That is out of range and will be deleted.\n\n
+message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n
+message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=%d
 message.batch.balancing.record.failed.balancing=Failed %s balancing
 message.batch.balancing.report.unknown.label=<Unknown Label>
 message.ld.balancing.report.entry.label=LLEN
