KFSMI-3164: remove cash drawer correction action/form and replace with maint doc functionality

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -887,6 +887,7 @@ error.document.cashDrawer.tenCentAmountNegative=The ten cent amount must be equa
 error.document.cashDrawer.fiveCentAmountNegative=The five cent amount must be equal to or greater than zero.
 error.document.cashDrawer.oneCentAmountNegative=The one cent amount must be equal to or greater than zero.
 error.document.cashDrawer.otherCentAmountNegative=The other cent amount must be equal to or greater than zero.
+error.document.cashDrawer.cashDrawerNotClosed=The cash drawer for campus {0} is no longer closed.  Maintenance cannot be completed on an open or locked cash drawer.
 
 # Sufficient Funds
 error.account.insufficientFunds=Insufficient funds for Account {0}-{1}, SF Object {2}, Account Sufficient Funds Code {3}. Please contact your campus budget office if you have concerns about insufficient funds checking.
