--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1496,6 +1496,7 @@ error.budget.noBudgetAllowed = The specified account {0} with expiration {1}, bu
 error.budget.budgetRecordingLevelNotAllowed = The specified account {0} has budget recording level {1}, budget not allowed.
 error.budget.subAccountTypeNotAllowed = The specified sub-account {0} has a21 type {1}, budget not allowed.
 error.budget.lineExists = A line using the primary key values {0} already exists.
+error.budget.lineReinstated = Deleted line using the primary key values {0} reinstated.
 error.budget.laborObjectInNoWagesAccount = Labor Object {0} not allowed in no wages account.
 error.budget.noDeleteAllowedWithBase = Deletion not allowed for accounting line {0} with non-zero base amount.
 error.budget.noDeleteAllowedSalaryDetail = Deletion not allowed for accounting line {0} with existing salary detail lines.
