KULCAP-1066: CAB FO changed Additional charges (exception is trade-in allowance) allocation in batch process. KULCAP-1207: PurAP Asset Lock, testing and bug fixing; KULCAP-1208: CAMS documents locking, testing and clean up code;

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2124,6 +2124,7 @@ error.document.paymentApplication.enteredInvoiceNumberInvalid=The invoice number
 # Capital Assets Management
 error.document.records_no_selected=Records were not selected. Please, mark the records you want to delete or validate.
 error.document.inactive.field={0} is inactive. 
+error.asset.locked = Asset is locked by CAMS user as document <a href="{0}">#{1}</a>.
 # ** Batch **
 error.batch.depreciation.assetsNotFound=There are no assets eligible for depreciation.
 error.batch.depreciation.baseAmountCalculationError=An error occurred when calculating assets base amount.
