--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1951,12 +1951,16 @@ pdp.extractTransactions.reportFilename = pdp_ledger
 #Accounts Receivable: Invoice Item Code error
 error.invoiceItemCode.nonPositiveNumericValue={0} must be a positive number.
 error.invoiceItemCode.orgOptionsDoesNotExistForChartAndOrg=Organization Options information must exist for Chart of Accounts code "{0}" and Organization Code "{1}".<br>
+error.invoiceItemCode.errorInvalidChartOfAccountsCode = Invalid Chart of Accounts code. Billing Org must not be different from use's Billing Org.
+error.invoiceItemCode.errorInvalidOrganizationCode = Invalid Organization code. Billing Org must not be different from use's Billing Org.
 
 #Accounts Receivable: System Information errors
 #error.SystemInformation.salesTaxObjectCodeInvalid=ERROR: Must be of type Income (CH,IC,IH).
 error.SystemInformation.clearingAccountInactive= Clearing Account must not be inactive.
 error.SystemInformation.wireAccountInactive= Wire Account must not be inactive.
 error.SystemInformation.lockboxNumberNotUnique = Lockbox Number must be unique.
+error.SystemInformation.postalStateCodeNotValid= State is not valid.
+error.SystemInformation.postalZipCodeNotValid= Postal Code is not valid.
 
 #Accounts Receivable: Organization Options errors
 error.document.organizationOptions.sysInfoDoesNotExistForProcessingChartAndOrg=System Information must exist for Processing Chart of Accounts code "{0}" and Processing Organization Code "{1}".
