KULPURAP-3625 Invoice image is now required for a payment request if "requires attachment indicator" is set.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1086,6 +1086,7 @@ errors.item.percent=All {0}s of {1} must be whole numbers between 1-100; includi
 errors.item.accounting.rounding=The accounting dollars you have entered on accounting line {0} cannot be represented with the level of accuracy inherent in the system. The entry has been adjusted by {1}. If this system amount is not satisfactory, a GEC will need to be processed to adjust the accounting.
 errors.item.accounting.dollar.total={0} has invalid totals. The edited amount is {1}. The total of the accounting lines must equal {2}.
 errors.item.accounting.expired=Account {0} has expired. This document does not allow the usage of expired accounts.
+errors.item.accounting.expired.replace=Account {0} has expired and must be replaced with a different account.
 errors.item.belowTheLine.noUnitCost=No accounts can be entered on below the line item {0} that have no unit cost.
 errors.item.capitalAsset.capital.and.expense=On {0}, Object Codes must be all capital or all expense.  Object Code {1} is inconsistent with prior accounts' Object Codes.
 errors.item.capitalAsset.tranType.objectCodeSubtype=On {0}, a Capital Asset Transaction Type of {1} is invalid with Object Code {2}.  To change Transaction Type to fit the Object Code, you may need to first change Recurring Payment Type.
@@ -1253,6 +1254,7 @@ errors.invalid.pay.date=Pay dates may not be dated in the past.
 errors.invoice.items.noneLeft=There are no items with encumbrances to be invoiced.
 errors.cancel.cancelled=Payment Request has already been cancelled.
 errors.cancel.extracted=Payment Request has been extracted to PDP and cannot be cancelled
+error.paymentRequest.invoice.required=An invoice is required and must be attached.
 
 errors.item.accounting.amount.total=The accounts on {0} do not add up to the total item amount.
 errors.accountString.totalAmount.negative=The accounting string {0} on this document is not allowed to be a negative total dollar amount.  Currently it is {1}.
