KFSMI-3516: Revisions to ReportWriterService and more conversions to utilize it.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2413,9 +2413,9 @@ cab.error.data.edit.lock = This version of data has already been modified by ano
 # Balancing batch process messages
 error.batch.balancing.files=Input files not found or not readable.
 error.batch.balancing.unknown.failure=Process stopped due to %s on line number %d
-message.batch.balancing.data.insert=%s or %s empty. Running populates on history tables.\n\n
-message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for fiscal year of %d found. That is out of range and will be deleted.\n\n
-message.batch.balancing.failure.count=\nTotal failure count for %s is %d. Only up to %d failures printed.\n
+message.batch.balancing.data.insert=%s or %s empty. Running populates on history tables.
+message.batch.balancing.obsolete.fiscal.year.data.deleted=%s or %s for fiscal year of %d found. That is out of range and will be deleted.
+message.batch.balancing.failure.count=Total failure count for %s is %d. Only up to %d failures printed.
 message.batch.balancing.record.before.fiscal.year=Record before universityFiscalYear=%d
 message.batch.balancing.record.failed.balancing=Failed %s balancing
 message.batch.balancing.report.unknown.label=<Unknown Label>
@@ -2425,16 +2425,16 @@ message.gl.balancing.report.entry.label=GLEN
 message.gl.balancing.report.balance.label=GLBL
 message.gl.balancing.report.account.balance.label=ACBL
 message.gl.balancing.report.encumbrance.label=GLEC
-message.gl.balancing.report.fiscal.years.included=FISCAL YEARS INCLUDED IN BALANCING              %s\n
-message.gl.balancing.report.history.tables.initialized=HISTORY TABLES INITIALIZED - UPDATES SKIPPED     %9s\n
-message.gl.balancing.report.obsolete.deleted=OBSOLETE HISTORY DELETED                         %9s\n
-message.gl.balancing.report.updated.skipped=UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d\n
-message.gl.balancing.report.comparision.failure=%s AMOUNT FAILURES   %-25s %,9d\n
-message.gl.balancing.report.entry.sum.row.count.history=%s SUM(ROW COUNT) - CALC. %-20s %,9d\n
-message.gl.balancing.report.entry.row.count.production=%s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.balance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.balance.row.count.production=%s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.account.balance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.account.balance.row.count.production=%s ROW COUNT - PROD.                           %,9d\n
-message.gl.balancing.report.encumbrance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d\n
-message.gl.balancing.report.encumbrance.row.count.production=%s ROW COUNT - PROD.                           %,9d\n
+message.gl.balancing.report.fiscal.years.included=FISCAL YEARS INCLUDED IN BALANCING              %s
+message.gl.balancing.report.history.tables.initialized=HISTORY TABLES INITIALIZED - UPDATES SKIPPED     %9s
+message.gl.balancing.report.obsolete.deleted=OBSOLETE HISTORY DELETED                         %9s
+message.gl.balancing.report.updated.skipped=UPDATES SKIPPED DUE TO OUT OF RANGE FISCAL YEAR  %,9d
+message.gl.balancing.report.comparision.failure=%s AMOUNT FAILURES   %-25s %,9d
+message.gl.balancing.report.entry.sum.row.count.history=%s SUM(ROW COUNT) - CALC. %-20s %,9d
+message.gl.balancing.report.entry.row.count.production=%s ROW COUNT - PROD.                           %,9d
+message.gl.balancing.report.balance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d
+message.gl.balancing.report.balance.row.count.production=%s ROW COUNT - PROD.                           %,9d
+message.gl.balancing.report.account.balance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d
+message.gl.balancing.report.account.balance.row.count.production=%s ROW COUNT - PROD.                           %,9d
+message.gl.balancing.report.encumbrance.row.count.history=%s ROW COUNT - CALC. %-25s %,9d
+message.gl.balancing.report.encumbrance.row.count.production=%s ROW COUNT - PROD.                           %,9d
