Fixed a situation where we werent doing adequate validations on the values entered into the Unapplied customer number and amount fields. KULAR-799

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2121,6 +2121,7 @@ error.document.paymentApplication.nonInvoicedAccountRequired=Account is required
 error.document.paymentApplication.nonInvoicedFinancialObjectRequired=Object code is required on non-ar lines.
 error.document.paymentApplication.cannotQuickApplyOnInvoiceWithZeroOpenAmount=Cannot quick-apply to an Invoice with a Zero Open Amount.
 error.document.paymentApplication.unappliedAmountCannotBeEmptyOrZero=Unapplied amount cannot be empty or zero.
+error.document.paymentApplication.unappliedAmountCannotBeNegative=Unapplied amount cannot be negative.
 error.document.paymentApplication.unappliedCustomerNumberCannotBeBlank=Customer number on unapplied line cannot be blank.
 error.document.paymentApplication.enteredInvoiceCustomerNumberInvalid=The customer number entered does not exist.
 error.document.paymentApplication.enteredInvoiceNumberInvalid=The invoice number entered does not exist.
