--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1426,9 +1426,9 @@ error.labor.tranferAmountExceedMaximum = The transfer amount cannot exceed the m
 error.labor.cannotTransferNegativeAmount = The transfer amount cannot be negative when the balance amount is positive
 error.labor.transferAmountNotBalancedByObject = The transfer amount should be same as that in source accounting line by object code
 error.labor.transferAmountByObjectApprovalChange= The amount transferred by object code may not change during approval for non-admin users.
-error.labor.accountNotSame = The amount can only be tranferred from a single account at once
-error.labor.employeeIdNotSame = The amount can only be tranferred from the accounts of a single employee at once
-error.labor.employeeIdNotSameInTarget = The amount can only be tranferred to an accounts of a single employee at once
+error.labor.accountNotSame = The amount can only be transferred from a single account at once
+error.labor.employeeIdNotSame = The amount can only be transferred from the accounts of a single employee at once
+error.labor.employeeIdNotSameInTarget = The amount can only be transferred to an accounts of a single employee at once
 
 error.labor.effortReportPeriodClosed = Effort Certification report {0} which contains period {1}-{2} is closed. Salary transfers are not allowed for this period.
 error.labor.effortOpenPeriodCostShare = Effort Certification report {0} which contains period {1}-{2} is open. Transfers involving cost share sub-accounts are not allowed.
