--- a/build.properties
+++ b/build.properties
@@ -161,6 +161,15 @@ require.https=false
 validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
+# used in KFS-PURAP B2B functions - value used is derived by build.xml based on build.environment
+b2b.test.environment=test
+b2b.production.environment=Production
+b2b.user.agent=
+b2b.purchase.order.password=
+b2b.shopping.password=
+b2b.purchase.order.url=
+b2b.punch.back.url=
+b2b.punch.out.url=
 
 spring.transaction.bean.file=spring-jta.xml
 spring.datasource.bean.file=spring-datasources.xml
