--- a/build.properties
+++ b/build.properties
@@ -162,14 +162,19 @@ validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
 # used in KFS-PURAP B2B functions - value used is derived by build.xml based on build.environment
+b2b.user.agent=
 b2b.test.environment=test
 b2b.production.environment=Production
-b2b.user.agent=
-b2b.purchase.order.password=
-b2b.shopping.password=
-b2b.purchase.order.url=
-b2b.punch.back.url=
-b2b.punch.out.url=
+b2b.test.purchase.order.password=test
+b2b.production.purchase.order.password=prod
+b2b.test.shopping.password=test
+b2b.production.shopping.password=prod
+b2b.test.purchase.order.url=test
+b2b.production.purchase.order.url=prod
+b2b.test.punch.back.url=test
+b2b.production.punch.back.url=prod
+b2b.test.punch.out.url=test
+b2b.production.punch.out.url=prod
 
 spring.transaction.bean.file=spring-jta.xml
 spring.datasource.bean.file=spring-datasources.xml
