--- a/build.xml
+++ b/build.xml
@@ -81,6 +81,26 @@
 			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
 		</condition>
 		<property name="b2b.environment" value="${b2b.test.environment}" />
+		<condition property="b2b.purchase.order.password" value="${b2b.production.purchase.order.password}">
+			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
+		</condition>
+		<property name="b2b.purchase.order.password" value="${b2b.test.purchase.order.password}" />
+		<condition property="b2b.shopping.password" value="${b2b.production.shopping.password}">
+			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
+		</condition>
+		<property name="b2b.shopping.password" value="${b2b.test.shopping.password}" />
+		<condition property="b2b.purchase.order.url" value="${b2b.production.purchase.order.url}">
+			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
+		</condition>
+		<property name="b2b.purchase.order.url" value="${b2b.test.purchase.order.url}" />
+		<condition property="b2b.punch.back.url" value="${b2b.production.punch.back.url}">
+			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
+		</condition>
+		<property name="b2b.punch.back.url" value="${b2b.test.punch.back.url}" />
+		<condition property="b2b.punch.out.url" value="${b2b.production.punch.out.url}">
+			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
+		</condition>
+		<property name="b2b.punch.out.url" value="${b2b.test.punch.out.url}" />
 		<loadfile property="configuration" srcfile="${build.project.directory}/${configuration.file}"><filterchain><expandproperties/></filterchain></loadfile>
 		<loadfile property="p6spy" srcfile="${build.project.directory}/${p6spy.file}"><filterchain><expandproperties/></filterchain></loadfile>
 		<loadfile property="web" srcfile="${build.project.directory}/${web.file}"><filterchain><expandproperties/></filterchain></loadfile>
