--- a/build.properties
+++ b/build.properties
@@ -161,7 +161,7 @@ require.https=false
 validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
-# used in KFS-PURAP B2B functions - value used is derived by build.xml based on build.environment
+# values used in KFS-PURAP B2B functions - all values but user agent derived by build.xml based on build.environment
 b2b.user.agent=
 b2b.test.environment=test
 b2b.production.environment=Production
