--- a/build.properties
+++ b/build.properties
@@ -165,16 +165,16 @@ data.dictionary.validate=true
 b2b.user.agent=
 b2b.test.environment=test
 b2b.production.environment=Production
-b2b.test.purchase.order.password=test
-b2b.production.purchase.order.password=prod
-b2b.test.shopping.password=test
-b2b.production.shopping.password=prod
-b2b.test.purchase.order.url=test
-b2b.production.purchase.order.url=prod
-b2b.test.punch.back.url=test
-b2b.production.punch.back.url=prod
-b2b.test.punch.out.url=test
-b2b.production.punch.out.url=prod
+b2b.test.purchase.order.password=
+b2b.production.purchase.order.password=
+b2b.test.shopping.password=
+b2b.production.shopping.password=
+b2b.test.purchase.order.url=
+b2b.production.purchase.order.url=
+b2b.test.punch.back.url=
+b2b.production.punch.back.url=
+b2b.test.punch.out.url=
+b2b.production.punch.out.url=
 
 spring.transaction.bean.file=spring-jta.xml
 spring.datasource.bean.file=spring-datasources.xml
